--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CarsheringApplication"
         tools:targetApi="31">
-        <service
-            android:name=".firebase.MessegingService"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
-            </intent-filter>
-        </service>
         <activity android:name=".CarsharingActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
@@ -32,7 +25,7 @@
             </intent-filter>
         </activity>
         <activity android:name="com.example.carsheringapplication.signinActivivty" />
-        <activity android:name="com.example.carsheringapplication.ContactActivivty" />
+        <activity android:name="com.example.carsheringapplication.NewOrder" />
     </application>
 
 </manifest>
